Update input fields in edit form
Removed placeholder text from subject and room inputs.

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
       <h2 id="modal-title">コマを編集</h2>
       <form id="edit-form">
         <div class="form-row">
-          <label>科目名<input id="subject" type="text" placeholder="例: 数学" /></label>
+          <label>科目名<input id="subject" type="text" /></label>
         </div>
         <div class="form-row">
-          <label>教室<input id="room" type="text" placeholder="例: 101教室" /></label>
+          <label>教室<input id="room" type="text" /></label>
         </div>
         <div class="form-row">
           <label>講義時間<input id="time" type="text" placeholder="例: 09:00-09:50" /></label>
